--- a/src/app/fixed-nav/fixed-nav.component.css
+++ b/src/app/fixed-nav/fixed-nav.component.css
@@ -217,6 +217,57 @@
 
 .autocomplete {
     display: block;
+    left: 35% !important;
+    transform: translateZ(0);
+    -webkit-transform: translateZ(0);
+    -moz-transform: translateZ(0);
+    animation: pop-in 0.25s;
+    -webkit-animation: pop-in 0.25s;
+    -moz-animation: pop-in 0.25s;
+
+    position: fixed;
+    top: 75px;
+    z-index: 20;
+}
+
+.autocomplete form {
+    width: 590px !important;
+    padding: 10px 20px 40px !important;
+    max-height: 450px !important;
+
+    position: relative;
+    width: 400px;
+    max-height: 400px;
+    margin-left: -200px;
+    padding: 10px 10px 40px;
+    background: #fbfbfb;
+    border: 1px solid #d7d7d7;
+    border-radius: 4px;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
+    font: 15px/normal arial, helvetica;
+    color: #333;
+}
+
+.autocomplete ul {
+    clear: both;
+    float: left;
+    width: 380px;
+    margin: 5px 0 20px;
+    padding: 10px;
+    list-style-type: none;
+    background: #fff;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
+}
+
+.autocomplete .minicart-item a {
+    color: #333;
+    text-decoration: none;
+    font-size: 1em;
+    display: block;
+    margin-bottom: .5em;
+    text-transform: capitalize;
 }
 
 @media (max-width: 768px){
