--- a/src/app/fixed-nav/fixed-nav.component.html
+++ b/src/app/fixed-nav/fixed-nav.component.html
@@ -39,7 +39,7 @@
     <div class="clearfix"> </div>
 </div>
 
-<div *ngIf="isShow" class="autocomplete test">
+<div *ngIf="isShow" class="autocomplete">
     <form method="post" class="" action="#" target="">
         <ul>
             <li class="minicart-item"  *ngFor="let product of searchItems">
