--- a/src/app/detail/detail.component.html
+++ b/src/app/detail/detail.component.html
@@ -70,7 +70,7 @@
 <!---728x90--->
 
 <!-- brands -->
-<div class="w3ls_w3l_banner_nav_right_grid w3ls_w3l_banner_nav_right_grid_popular">
+<!-- <div class="w3ls_w3l_banner_nav_right_grid w3ls_w3l_banner_nav_right_grid_popular">
 <div class="container">
     <h3>Popular Brands</h3>
         <div class="w3ls_w3l_banner_nav_right_grid1">
@@ -182,5 +182,5 @@
             <div class="clearfix"> </div>
         </div>
 </div>
-</div>
+</div> -->
 <!-- //brands -->
