--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -67,10 +67,29 @@
                     </div>
                     <div class="clearfix"> </div>
                     <textarea  formControlName="message" placeholder="Message...">Message...</textarea>
-                    <input [disabled]="!contactForm.valid" type="submit" value="Submit">
+                    <input [disabled]="!contactForm.valid" type="submit" value="Submit" data-toggle="modal" data-target="#exampleModal">
                     <input type="reset" value="Clear">
                 </form>
             </div>
+            <!-- <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">Mail Us</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                        </div>
+                        <div class="modal-body">
+                            Submitted Successfully!
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                        </div>
+                    </div>
+                </div>
+            </div> -->
+            <app-dialog title="Mail Us"></app-dialog>
             <div class="clearfix"> </div>
         </div>
     </div>
