--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -2,99 +2,70 @@
 <!-- login -->
     <div class="w3_login">
         <h3>Sign Up</h3>
-
         <div class="w3_login_module">
             <div class="module form-module">
                 <div class="form">
-                <h2>Create an account</h2>
-                <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
-                    <input type="text" formControlName="username" placeholder="Username">
-                    <div class="text-danger" *ngIf="registerForm.get('username').touched && registerForm.get('username').invalid">
-                        <div class="text-danger" *ngIf="registerForm.get('username').hasError('required')">
-                            Username is Required!
+                    <h2>Create an account</h2>
+                    <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
+                        <input type="text" formControlName="username" placeholder="Username">
+                        <div class="text-danger" *ngIf="registerForm.get('username').touched && registerForm.get('username').invalid">
+                            <div class="text-danger" *ngIf="registerForm.get('username').hasError('required')">
+                                Username is Required!
+                            </div>
+                            <div class="text-danger" *ngIf="registerForm.get('username').hasError('pattern')">
+                                Invalid Username!
+                            </div>
+                            <div class="text-danger" *ngIf="registerForm.get('username').hasError('minlength') && !registerForm.get('username').hasError('pattern')">
+                                Min Length should be of 6!
+                            </div>
                         </div>
-                        <div class="text-danger" *ngIf="registerForm.get('username').hasError('pattern')">
-                            Invalid Username!
+                        
+                        <input type="password" formControlName="password" placeholder="Password">
+                        <div class="text-danger" *ngIf="registerForm.get('password').touched && registerForm.get('password').invalid">
+                            <div class="text-danger" *ngIf="registerForm.get('password').hasError('required')">
+                                    Password is Required!
+                            </div>
+                            <div class="text-danger" *ngIf="registerForm.get('password').hasError('minlength')">
+                                Min Length should be of 6!
+                            </div>
                         </div>
-                        <div class="text-danger" *ngIf="registerForm.get('username').hasError('minlength') && !registerForm.get('username').hasError('pattern')">
-                            Min Length should be of 6!
+                        
+                        <input type="email" formControlName="email" placeholder="Email Address">
+                        <div class="text-danger" *ngIf="registerForm.get('email').touched && registerForm.get('email').invalid">
+                            <div class="text-danger" *ngIf="registerForm.get('email').hasError('required')">
+                                Email is Required!
+                            </div>
+                            <div class="text-danger" *ngIf="registerForm.get('email').hasError('pattern')">
+                                Invalid Email!
+                            </div>
                         </div>
-                    </div>
-                    
-                    <input type="password" formControlName="password" placeholder="Password">
-                    <div class="text-danger" *ngIf="registerForm.get('password').touched && registerForm.get('password').invalid">
-                        <div class="text-danger" *ngIf="registerForm.get('password').hasError('required')">
-                                Password is Required!
+                        
+                        <input type="text" formControlName="phone" placeholder="Phone Number">
+                        <div class="text-danger" *ngIf="registerForm.get('phone').touched && registerForm.get('phone').invalid">
+                            <div class="text-danger" *ngIf="registerForm.get('phone').hasError('required')">
+                                Phone is Required!
+                            </div>
+                            <div class="text-danger" *ngIf="registerForm.get('phone').hasError('pattern')">
+                                Invalid Phone!
+                            </div>
+                            <div class="text-danger" *ngIf="registerForm.get('phone').hasError('minlength') && !registerForm.get('phone').hasError('pattern')">
+                                Min Length should be of 10!
+                            </div>
+                            <div class="text-danger" *ngIf="registerForm.get('phone').hasError('maxlength') && !registerForm.get('phone').hasError('pattern')">
+                                Max Length should be 10!
+                            </div>
                         </div>
-                        <div class="text-danger" *ngIf="registerForm.get('password').hasError('minlength')">
-                            Min Length should be of 6!
-                        </div>
-                    </div>
-                    
-                    <input type="email" formControlName="email" placeholder="Email Address">
-                    <div class="text-danger" *ngIf="registerForm.get('email').touched && registerForm.get('email').invalid">
-                        <div class="text-danger" *ngIf="registerForm.get('email').hasError('required')">
-                            Email is Required!
-                        </div>
-                        <div class="text-danger" *ngIf="registerForm.get('email').hasError('pattern')">
-                            Invalid Email!
-                        </div>
-                    </div>
-                    
-                    <input type="text" formControlName="phone" placeholder="Phone Number">
-                    <div class="text-danger" *ngIf="registerForm.get('phone').touched && registerForm.get('phone').invalid">
-                        <div class="text-danger" *ngIf="registerForm.get('phone').hasError('required')">
-                            Phone is Required!
-                        </div>
-                        <div class="text-danger" *ngIf="registerForm.get('phone').hasError('pattern')">
-                            Invalid Phone!
-                        </div>
-                        <div class="text-danger" *ngIf="registerForm.get('phone').hasError('minlength') && !registerForm.get('phone').hasError('pattern')">
-                            Min Length should be of 10!
-                        </div>
-                        <div class="text-danger" *ngIf="registerForm.get('phone').hasError('maxlength') && !registerForm.get('phone').hasError('pattern')">
-                            Max Length should be 10!
-                        </div>
-                    </div>
-                    
-                    <input [disabled]="!registerForm.valid" type="submit" value="Register">
-                </form>
+                        
+                        <input [disabled]="!registerForm.valid" type="submit" value="Register"  data-toggle="modal" data-target="#exampleModal">
+                    </form>
                 </div>
+                <app-dialog title="Sign Up"></app-dialog>
             </div>
         </div>
-
-        <!-- <div class="w3_login_module">
-            <div class="module form-module">
-                <div class="form">
-                <h2>Create an account</h2>
-                <form>
-                    <label>id</label>
-                    <input [(ngModel)]="product.id" [ngModelOptions]="{standalone: true}"><br>
-                    <label>name</label>
-                    <input [(ngModel)]="product.name" [ngModelOptions]="{standalone: true}"><br>
-                    <label>desc</label>
-                    <input [(ngModel)]="product.desc" [ngModelOptions]="{standalone: true}"><br>
-                    <label>price</label>
-                    <input [(ngModel)]="product.price" [ngModelOptions]="{standalone: true}"><br>
-                    <label>discPrice</label>
-                    <input [(ngModel)]="product.discPrice" [ngModelOptions]="{standalone: true}"><br>
-                    <label>rating</label>
-                    <input [(ngModel)]="product.rating" [ngModelOptions]="{standalone: true}"><br>
-                    <label>tagFile</label>
-                    <input [(ngModel)]="product.tagFile" [ngModelOptions]="{standalone: true}"><br>
-                    <label>imgFile</label>
-                    <input [(ngModel)]="product.imgFile" [ngModelOptions]="{standalone: true}"><br>
-                    <label>category</label>
-                    <input [(ngModel)]="product.category" [ngModelOptions]="{standalone: true}"><br>
-                    
-                    <button type="submit" (click)="addProduct()">Insert</button>
-                </form>
-                </div>
-            </div>
-        </div>
-    </div> -->
+    </div>
 <!-- //login -->
 </div>
+
 <div class="clearfix"></div>
 
 <!-- newsletter-top-serv-btm -->
