--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -9,12 +9,12 @@
             rerum facilis est et expedita distinctio.</p>
 
         <div class="row agile_about_grids">
-            <div class="col-md-6 agile_about_grid_right">
+            <div class="col-lg-6 agile_about_grid_right">
                 <div>
                     <img src="../../assets/31.jpg" alt=" " class="img-responsive" />
                 </div>
             </div>
-            <div class="col-md-6 agile_about_grid_left">
+            <div class="col-lg-6 agile_about_grid_left">
                 <ol>
                     <li>laborum et dolorum fuga</li>
                     <li>corrupti quos dolores et quas</li>
@@ -36,7 +36,7 @@
 		<div class="container">
 			<h3>Meet Our Amazing Team</h3>
 			<div class="row agileits_team_grids">
-				<div class="col-md-3 agileits_team_grid">
+				<div class="col-lg-3 agileits_team_grid">
 					<img src="../../assets/32.jpg" alt=" " class="img-responsive" />
 					<h4>Martin Paul</h4>
 					<p>Manager</p>
@@ -46,7 +46,7 @@
 						<li><a href="#" class="google"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
 					</ul>
 				</div>
-				<div class="col-md-3 agileits_team_grid">
+				<div class="col-lg-3 agileits_team_grid">
 					<img src="../../assets/33.jpg" alt=" " class="img-responsive" />
 					<h4>Michael Rick</h4>
 					<p>Supervisor</p>
@@ -56,7 +56,7 @@
 						<li><a href="#" class="google"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
 					</ul>
 				</div>
-				<div class="col-md-3 agileits_team_grid">
+				<div class="col-lg-3 agileits_team_grid">
 					<img src="../../assets/34.jpg" alt=" " class="img-responsive" />
 					<h4>Thomas Carl</h4>
 					<p>Supervisor</p>
@@ -66,7 +66,7 @@
 						<li><a href="#" class="google"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
 					</ul>
 				</div>
-				<div class="col-md-3 agileits_team_grid">
+				<div class="col-lg-3 agileits_team_grid">
 					<img src="../../assets/35.jpg" alt=" " class="img-responsive" />
 					<h4>Laura Lee</h4>
 					<p>CEO</p>
@@ -96,13 +96,13 @@
                 <div class="carousel-inner wmuSliderWrapper">
                     <div class="carousel-item active banner-wrap">
                         <div class="row">
-                            <div class="col-md-6 w3_testimonials_grid">
+                            <div class="col-lg-6 w3_testimonials_grid">
                                 <p><i class="fa fa-quote-right" aria-hidden="true"></i>Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis 
                                     voluptatibus maiores alias consequatur aut perferendis doloribus asperiores 
                                     repellat.</p>
                                 <h4>Andrew Smith <span>Customer</span></h4>
                             </div>
-                            <div class="col-md-6 w3_testimonials_grid">
+                            <div class="col-lg-6 w3_testimonials_grid">
                                 <p><i class="fa fa-quote-right" aria-hidden="true"></i>Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis 
                                     voluptatibus maiores alias consequatur aut perferendis doloribus asperiores 
                                     repellat.</p>
@@ -113,13 +113,13 @@
                     </div>
                     <div class="carousel-item banner-wrap">
                         <div class="row">
-                            <div class="col-md-6 w3_testimonials_grid">
+                            <div class="col-lg-6 w3_testimonials_grid">
                                 <p><i class="fa fa-quote-right" aria-hidden="true"></i>Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis 
                                     voluptatibus maiores alias consequatur aut perferendis doloribus asperiores 
                                     repellat.</p>
                                 <h4>Crisp Kale <span>Customer</span></h4>
                             </div>
-                            <div class="col-md-6 w3_testimonials_grid">
+                            <div class="col-lg-6 w3_testimonials_grid">
                                 <p><i class="fa fa-quote-right" aria-hidden="true"></i>Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis 
                                     voluptatibus maiores alias consequatur aut perferendis doloribus asperiores 
                                     repellat.</p>
@@ -130,13 +130,13 @@
                     </div>
                     <div class="carousel-item banner-wrap">
                         <div class="row">
-                            <div class="col-md-6 w3_testimonials_grid">
+                            <div class="col-lg-6 w3_testimonials_grid">
                                 <p><i class="fa fa-quote-right" aria-hidden="true"></i>Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis 
                                     voluptatibus maiores alias consequatur aut perferendis doloribus asperiores 
                                     repellat.</p>
                                 <h4>Rosy Carl <span>Customer</span></h4>
                             </div>
-                            <div class="col-md-6 w3_testimonials_grid">
+                            <div class="col-lg-6 w3_testimonials_grid">
                                 <p><i class="fa fa-quote-right" aria-hidden="true"></i>Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis 
                                     voluptatibus maiores alias consequatur aut perferendis doloribus asperiores 
                                     repellat.</p>
