--- a/src/app/beverage/beverage.component.html
+++ b/src/app/beverage/beverage.component.html
@@ -8,7 +8,7 @@
             <div class="w3ls_w3l_banner_nav_right_grid1">
                 <h6>soft drinks</h6>
                 <div class="row">
-                    <div class="col-md-3 w3ls_w3l_banner_left" *ngFor="let product of softItems">
+                    <div class="col-lg-3 w3ls_w3l_banner_left" *ngFor="let product of softItems">
                         <div class="hover14 column">
                             <div class="agile_top_brand_left_grid w3l_agile_top_brand_left_grid">
                                 <div *ngIf="product.payload.doc.data().tagFile=='offer.png'" class="agile_top_brand_left_grid_pos">
@@ -46,7 +46,7 @@
             <div class="w3ls_w3l_banner_nav_right_grid1">
                 <h6>Juices</h6>
                 <div class="row">
-                    <div class="col-md-3 w3ls_w3l_banner_left" *ngFor="let product of juiceItems">
+                    <div class="col-lg-3 w3ls_w3l_banner_left" *ngFor="let product of juiceItems">
                         <div class="hover14 column">
                             <div class="agile_top_brand_left_grid w3l_agile_top_brand_left_grid">
                                 <div *ngIf="product.payload.doc.data().tagFile=='offer.png'" class="agile_top_brand_left_grid_pos">
@@ -83,7 +83,7 @@
             <div class="w3ls_w3l_banner_nav_right_grid1">
                 <h6>Energy Drinks</h6>
                 <div class="row">
-                    <div class="col-md-3 w3ls_w3l_banner_left" *ngFor="let product of energyItems">
+                    <div class="col-lg-3 w3ls_w3l_banner_left" *ngFor="let product of energyItems">
                         <div class="hover14 column">
                             <div class="agile_top_brand_left_grid w3l_agile_top_brand_left_grid">
                                 <div *ngIf="product.payload.doc.data().tagFile=='offer.png'" class="agile_top_brand_left_grid_pos">
