--- a/src/app/bread/bread.component.html
+++ b/src/app/bread/bread.component.html
@@ -6,7 +6,7 @@
         <div class="w3ls_w3l_banner_nav_right_grid w3ls_w3l_banner_nav_right_grid_sub">
             <h3 class="w3l_fruit">Bread & Bakery</h3>
             <div class="row w3ls_w3l_banner_nav_right_grid1 w3ls_w3l_banner_nav_right_grid1_veg">
-                <div class="col-md-3 w3ls_w3l_banner_left w3ls_w3l_banner_left_asdfdfd" *ngFor="let product of breadItems|slice:0:4;">
+                <div class="col-lg-3 w3ls_w3l_banner_left w3ls_w3l_banner_left_asdfdfd" *ngFor="let product of breadItems|slice:0:4;">
                     <div class="hover14 column">
                         <div class="agile_top_brand_left_grid w3l_agile_top_brand_left_grid">
                             <div *ngIf="product.payload.doc.data().tagFile=='offer.png'" class="agile_top_brand_left_grid_pos">
@@ -41,7 +41,7 @@
             </div>
 
             <div class="row w3ls_w3l_banner_nav_right_grid1 w3ls_w3l_banner_nav_right_grid1_veg">
-                <div class="col-md-3 w3ls_w3l_banner_left w3ls_w3l_banner_left_asdfdfd" *ngFor="let product of breadItems|slice:4:8;">
+                <div class="col-lg-3 w3ls_w3l_banner_left w3ls_w3l_banner_left_asdfdfd" *ngFor="let product of breadItems|slice:4:8;">
                     <div class="hover14 column">
                         <div class="agile_top_brand_left_grid w3l_agile_top_brand_left_grid">
                             <div *ngIf="product.payload.doc.data().tagFile=='offer.png'" class="agile_top_brand_left_grid_pos">
@@ -75,7 +75,7 @@
                 <div class="clearfix"> </div>
             </div>
             <div class="row w3ls_w3l_banner_nav_right_grid1 w3ls_w3l_banner_nav_right_grid1_veg">
-                <div class="col-md-3 w3ls_w3l_banner_left w3ls_w3l_banner_left_asdfdfd" *ngFor="let product of breadItems|slice:8:12;">
+                <div class="col-lg-3 w3ls_w3l_banner_left w3ls_w3l_banner_left_asdfdfd" *ngFor="let product of breadItems|slice:8:12;">
                     <div class="hover14 column">
                         <div class="agile_top_brand_left_grid w3l_agile_top_brand_left_grid">
                             <div *ngIf="product.payload.doc.data().tagFile=='offer.png'" class="agile_top_brand_left_grid_pos">
