--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -7,22 +7,30 @@
                 <div class="form">
                     <h2>Create an account</h2>
                     <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
-                        <input type="text" formControlName="username" placeholder="Username">
-                        <div class="text-danger" *ngIf="registerForm.get('username').touched && registerForm.get('username').invalid">
-                            <div class="text-danger" *ngIf="registerForm.get('username').hasError('required')">
+                        <input type="text" formControlName="username" placeholder="Username" (keyup)="searchUser($event)">
+                        <div class="text-danger" *ngIf="registerForm.get('username').invalid">
+                            <div class="text-danger" *ngIf="registerForm.get('username').touched && registerForm.get('username').hasError('required')">
                                 Username is Required!
                             </div>
                             <div class="text-danger" *ngIf="registerForm.get('username').hasError('pattern')">
                                 Invalid Username!
                             </div>
                             <div class="text-danger" *ngIf="registerForm.get('username').hasError('minlength') && !registerForm.get('username').hasError('pattern')">
-                                Min Length should be of 6!
+                                Min Length should be of 4!
+                            </div>
+                        </div>
+                        <div class="text-danger" *ngIf="!registerForm.get('username').invalid || registerForm.get('username').hasError('available')">
+                            <div class="text-danger" *ngIf="isAvailable">
+                                Username is Available!
+                            </div>
+                            <div class="text-danger" *ngIf="!isAvailable">
+                                Username already taken!
                             </div>
                         </div>
                         
                         <input type="password" formControlName="password" placeholder="Password">
-                        <div class="text-danger" *ngIf="registerForm.get('password').touched && registerForm.get('password').invalid">
-                            <div class="text-danger" *ngIf="registerForm.get('password').hasError('required')">
+                        <div class="text-danger" *ngIf="registerForm.get('password').invalid">
+                            <div class="text-danger" *ngIf="registerForm.get('password').touched && registerForm.get('password').hasError('required')">
                                     Password is Required!
                             </div>
                             <div class="text-danger" *ngIf="registerForm.get('password').hasError('minlength')">
@@ -31,8 +39,8 @@
                         </div>
                         
                         <input type="email" formControlName="email" placeholder="Email Address">
-                        <div class="text-danger" *ngIf="registerForm.get('email').touched && registerForm.get('email').invalid">
-                            <div class="text-danger" *ngIf="registerForm.get('email').hasError('required')">
+                        <div class="text-danger" *ngIf="registerForm.get('email').invalid">
+                            <div class="text-danger" *ngIf="registerForm.get('email').touched && registerForm.get('email').hasError('required')">
                                 Email is Required!
                             </div>
                             <div class="text-danger" *ngIf="registerForm.get('email').hasError('pattern')">
@@ -41,8 +49,8 @@
                         </div>
                         
                         <input type="text" formControlName="phone" placeholder="Phone Number">
-                        <div class="text-danger" *ngIf="registerForm.get('phone').touched && registerForm.get('phone').invalid">
-                            <div class="text-danger" *ngIf="registerForm.get('phone').hasError('required')">
+                        <div class="text-danger" *ngIf="registerForm.get('phone').invalid">
+                            <div class="text-danger" *ngIf="registerForm.get('phone').touched && registerForm.get('phone').hasError('required')">
                                 Phone is Required!
                             </div>
                             <div class="text-danger" *ngIf="registerForm.get('phone').hasError('pattern')">
@@ -71,7 +79,7 @@
 <!-- newsletter-top-serv-btm -->
 <div class="newsletter-top-serv-btm">
     <div class="container row mx-auto">
-        <div class="col-md-4 wthree_news_top_serv_btm_grid">
+        <div class="col-lg-4 wthree_news_top_serv_btm_grid">
             <div class="wthree_news_top_serv_btm_grid_icon">
                 <i class="fa fa-shopping-cart" aria-hidden="true"></i>
             </div>
@@ -79,7 +87,7 @@
             <p>Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus 
                 saepe eveniet ut et voluptates repudiandae sint et.</p>
         </div>
-        <div class="col-md-4 wthree_news_top_serv_btm_grid">
+        <div class="col-lg-4 wthree_news_top_serv_btm_grid">
             <div class="wthree_news_top_serv_btm_grid_icon">
                 <i class="fa fa-bar-chart" aria-hidden="true"></i>
             </div>
@@ -87,7 +95,7 @@
             <p>Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus 
                 saepe eveniet ut et voluptates repudiandae sint et.</p>
         </div>
-        <div class="col-md-4 wthree_news_top_serv_btm_grid">
+        <div class="col-lg-4 wthree_news_top_serv_btm_grid">
             <div class="wthree_news_top_serv_btm_grid_icon">
                 <i class="fa fa-truck" aria-hidden="true"></i>
             </div>
