--- a/src/app/branded/branded.component.html
+++ b/src/app/branded/branded.component.html
@@ -4,7 +4,7 @@
     </div>
 
     <div class="row w3l_banner_nav_right_banner3_btm">
-        <div class="col-md-4 w3l_banner_nav_right_banner3_btml">
+        <div class="col-lg-4 w3l_banner_nav_right_banner3_btml">
             <div class="view view-tenth">
                 <img src="../../assets/13.jpg" alt=" " class="img-responsive" />
                 <div class="mask">
@@ -19,7 +19,7 @@
                 <li>sed do eiusmod tempor incididunt</li>
             </ol>
         </div>
-        <div class="col-md-4 w3l_banner_nav_right_banner3_btml">
+        <div class="col-lg-4 w3l_banner_nav_right_banner3_btml">
             <div class="view view-tenth">
                 <img src="../../assets/14.jpg" alt=" " class="img-responsive" />
                 <div class="mask">
@@ -34,7 +34,7 @@
                 <li>vel eum iure reprehenderit</li>
             </ol>
         </div>
-        <div class="col-md-4 w3l_banner_nav_right_banner3_btml">
+        <div class="col-lg-4 w3l_banner_nav_right_banner3_btml">
             <div class="view view-tenth">
                 <img src="../../assets/15.jpg" alt=" " class="img-responsive" />
                 <div class="mask">
@@ -57,7 +57,7 @@
         <div class="w3ls_w3l_banner_nav_right_grid1">
             <h6>food</h6>
             <div class="row">
-                <div class="col-md-3 w3ls_w3l_banner_left" *ngFor="let product of foodItems">
+                <div class="col-lg-3 w3ls_w3l_banner_left" *ngFor="let product of foodItems">
                     <div class="hover14 column">
                         <div class="agile_top_brand_left_grid w3l_agile_top_brand_left_grid">
                             <div *ngIf="product.payload.doc.data().tagFile=='offer.png'" class="agile_top_brand_left_grid_pos">
@@ -94,7 +94,7 @@
         <div class="w3ls_w3l_banner_nav_right_grid1">
             <h6>vegetables & fruits</h6>
             <div class="row">
-                <div class="col-md-3 w3ls_w3l_banner_left" *ngFor="let product of vegItems">
+                <div class="col-lg-3 w3ls_w3l_banner_left" *ngFor="let product of vegItems">
                     <div class="hover14 column">
                         <div class="agile_top_brand_left_grid w3l_agile_top_brand_left_grid">
                             <div *ngIf="product.payload.doc.data().tagFile=='offer.png'" class="agile_top_brand_left_grid_pos">
@@ -131,7 +131,7 @@
         <div class="w3ls_w3l_banner_nav_right_grid1">
             <h6>beverages</h6>
             <div class="row">
-                <div class="col-md-3 w3ls_w3l_banner_left" *ngFor="let product of beverageItems">
+                <div class="col-lg-3 w3ls_w3l_banner_left" *ngFor="let product of beverageItems">
                     <div class="hover14 column">
                         <div class="agile_top_brand_left_grid w3l_agile_top_brand_left_grid">
                             <div *ngIf="product.payload.doc.data().tagFile=='offer.png'" class="agile_top_brand_left_grid_pos">
