--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -4,7 +4,7 @@
         <h3>Mail Us</h3>
 
         <div class="agileinfo_mail_grids">
-            <div class="col-md-4 agileinfo_mail_grid_left">
+            <div class="col-lg-4 agileinfo_mail_grid_left">
                 <ul>
                     <li><i class="fa fa-home" aria-hidden="true"></i></li>
                     <li>address<span>868 1st Avenue NYC.</span></li>
@@ -18,12 +18,12 @@
                     <li>call to us<span>(+123) 233 2362 826</span></li>
                 </ul>
             </div>
-            <div class="col-md-8 agileinfo_mail_grid_right">
+            <div class="col-lg-8 agileinfo_mail_grid_right">
                 <form [formGroup]="contactForm" (ngSubmit)="onSubmit()">
-                    <div class="col-md-6 wthree_contact_left_grid">
+                    <div class="col-lg-6 wthree_contact_left_grid">
                         <input type="text" formControlName="name" placeholder="Name*">
-                        <div class="text-danger" *ngIf="contactForm.get('name').touched && contactForm.get('name').invalid">
-                            <div class="text-danger" *ngIf="contactForm.get('name').hasError('required')">
+                        <div class="text-danger" *ngIf="contactForm.get('name').invalid">
+                            <div class="text-danger" *ngIf="contactForm.get('name').touched && contactForm.get('name').hasError('required')">
                                 Name is Required!
                             </div>
                             <div class="text-danger" *ngIf="contactForm.get('name').hasError('pattern')">
@@ -32,8 +32,8 @@
                         </div>
                         
                         <input type="email" formControlName="email" placeholder="Email*">
-                        <div class="text-danger" *ngIf="contactForm.get('email').touched && contactForm.get('email').invalid">
-                            <div class="text-danger" *ngIf="contactForm.get('email').hasError('required')">
+                        <div class="text-danger" *ngIf="contactForm.get('email').invalid">
+                            <div class="text-danger" *ngIf="contactForm.get('email').touched && contactForm.get('email').hasError('required')">
                                 Email is Required!
                             </div>
                             <div class="text-danger" *ngIf="contactForm.get('email').hasError('pattern')">
@@ -41,10 +41,10 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6 wthree_contact_left_grid">
+                    <div class="col-lg-6 wthree_contact_left_grid">
                         <input type="text" formControlName="phone" placeholder="Phone*">
-                        <div class="text-danger" *ngIf="contactForm.get('phone').touched && contactForm.get('phone').invalid">
-                            <div class="text-danger" *ngIf="contactForm.get('phone').hasError('required')">
+                        <div class="text-danger" *ngIf="contactForm.get('phone').invalid">
+                            <div class="text-danger" *ngIf="contactForm.get('phone').touched && contactForm.get('phone').hasError('required')">
                                 Phone is Required!
                             </div>
                             <div class="text-danger" *ngIf="contactForm.get('phone').hasError('pattern')">
@@ -59,8 +59,8 @@
                         </div>
                         
                         <input type="text" formControlName="subject" placeholder="Subject*">
-                        <div class="text-danger" *ngIf="contactForm.get('subject').touched && contactForm.get('subject').invalid">
-                            <div class="text-danger" *ngIf="contactForm.get('subject').hasError('required')">
+                        <div class="text-danger" *ngIf="contactForm.get('subject').invalid">
+                            <div class="text-danger" *ngIf="contactForm.get('subject').touched && contactForm.get('subject').hasError('required')">
                                 Subject is Required!
                             </div>
                         </div>
@@ -71,24 +71,6 @@
                     <input type="reset" value="Clear">
                 </form>
             </div>
-            <!-- <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                <div class="modal-dialog" role="document">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                        <h5 class="modal-title" id="exampleModalLabel">Mail Us</h5>
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                        </button>
-                        </div>
-                        <div class="modal-body">
-                            Submitted Successfully!
-                        </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                        </div>
-                    </div>
-                </div>
-            </div> -->
             <app-dialog title="Mail Us"></app-dialog>
             <div class="clearfix"> </div>
         </div>
