--- a/src/app/event/event.component.html
+++ b/src/app/event/event.component.html
@@ -4,12 +4,12 @@
         <h3>Events</h3>
 
         <div class="row w3agile_event_grids">
-            <div class="col-md-6 w3agile_event_grid">
+            <div class="col-lg-6 w3agile_event_grid">
                 <div class="row">
-                    <div class="col-md-3 w3agile_event_grid_left">
+                    <div class="col-lg-3 w3agile_event_grid_left">
                         <i class="fa fa-bullhorn" aria-hidden="true"></i>
                     </div>
-                    <div class="col-md-9 w3agile_event_grid_right">
+                    <div class="col-lg-9 w3agile_event_grid_right">
                         <h4>cum soluta nobis eligendi</h4>
                         <p>Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis 
                             voluptatibus.</p>
@@ -17,12 +17,12 @@
                 </div>
                 <div class="clearfix"> </div>
             </div>
-            <div class="col-md-6 w3agile_event_grid">
+            <div class="col-lg-6 w3agile_event_grid">
                 <div class="row">
-                    <div class="col-md-3 w3agile_event_grid_left">
+                    <div class="col-lg-3 w3agile_event_grid_left">
                         <i class="fa fa-bullseye" aria-hidden="true"></i>
                     </div>
-                    <div class="col-md-9 w3agile_event_grid_right">
+                    <div class="col-lg-9 w3agile_event_grid_right">
                         <h4>rerum hic tenetur a sapiente</h4>
                         <p>Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis 
                             voluptatibus.</p>
@@ -33,12 +33,12 @@
             <div class="clearfix"> </div>
         </div>
         <div class="row w3agile_event_grids">
-            <div class="col-md-6 w3agile_event_grid">
+            <div class="col-lg-6 w3agile_event_grid">
                 <div class="row">
-                    <div class="col-md-3 w3agile_event_grid_left">
+                    <div class="col-lg-3 w3agile_event_grid_left">
                         <i class="fa fa-credit-card" aria-hidden="true"></i>
                     </div>
-                    <div class="col-md-9 w3agile_event_grid_right">
+                    <div class="col-lg-9 w3agile_event_grid_right">
                         <h4>earum rerum tenetur sapiente</h4>
                         <p>Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis 
                             voluptatibus.</p>
@@ -46,12 +46,12 @@
                 </div>
                 <div class="clearfix"> </div>
             </div>
-            <div class="col-md-6 w3agile_event_grid">
+            <div class="col-lg-6 w3agile_event_grid">
                 <div class="row">
-                    <div class="col-md-3 w3agile_event_grid_left">
+                    <div class="col-lg-3 w3agile_event_grid_left">
                         <i class="fa fa-eye" aria-hidden="true"></i>
                     </div>
-                    <div class="col-md-9 w3agile_event_grid_right">
+                    <div class="col-lg-9 w3agile_event_grid_right">
                         <h4>quibu aut officiis debitis</h4>
                         <p>Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis 
                             voluptatibus.</p>
@@ -63,12 +63,12 @@
         </div>
         
         <div class="row w3agile_event_grids">
-            <div class="col-md-6 w3agile_event_grid">
+            <div class="col-lg-6 w3agile_event_grid">
                 <div class="row">
-                    <div class="col-md-3 w3agile_event_grid_left">
+                    <div class="col-lg-3 w3agile_event_grid_left">
                         <i class="fa fa-cog" aria-hidden="true"></i>
                     </div>
-                    <div class="col-md-9 w3agile_event_grid_right">
+                    <div class="col-lg-9 w3agile_event_grid_right">
                         <h4>necessitatibus saepe eveniet</h4>
                         <p>Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis 
                             voluptatibus.</p>
@@ -76,12 +76,12 @@
                 </div>
                 <div class="clearfix"> </div>
             </div>
-            <div class="col-md-6 w3agile_event_grid">
+            <div class="col-lg-6 w3agile_event_grid">
                 <div class="row">
-                    <div class="col-md-3 w3agile_event_grid_left">
+                    <div class="col-lg-3 w3agile_event_grid_left">
                         <i class="fa fa-trophy" aria-hidden="true"></i>
                     </div>
-                    <div class="col-md-9 w3agile_event_grid_right">
+                    <div class="col-lg-9 w3agile_event_grid_right">
                         <h4>repudiandae sint et molestiae</h4>
                         <p>Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis 
                             voluptatibus.</p>
@@ -93,15 +93,15 @@
         </div>
 
         <div class="row events-bottom">
-            <div class="col-md-6 events_bottom_left">
+            <div class="col-lg-6 events_bottom_left">
                 <div class="row">
-                    <div class="col-md-4 events_bottom_left1">
+                    <div class="col-lg-4 events_bottom_left1">
                         <div class="events_bottom_left1_grid">
                             <h4>20</h4>
                             <p>July, 2016</p>
                         </div>
                     </div>
-                    <div class="col-md-8 events_bottom_left2">
+                    <div class="col-lg-8 events_bottom_left2">
                         <div>
                             <img src="../../assets/15.jpg" alt=" " class="img-responsive" />
                             <h4>ut aut reiciendis facere possimus</h4>
@@ -117,15 +117,15 @@
                 </div>
                 <div class="clearfix"> </div>
             </div>
-            <div class="col-md-6 events_bottom_left">
+            <div class="col-lg-6 events_bottom_left">
                 <div class="row">
-                    <div class="col-md-4 events_bottom_left1">
+                    <div class="col-lg-4 events_bottom_left1">
                         <div class="events_bottom_left1_grid">
                             <h4>21</h4>
                             <p>July, 2016</p>
                         </div>
                     </div>
-                    <div class="col-md-8 events_bottom_left2">
+                    <div class="col-lg-8 events_bottom_left2">
                         <div>
                             <img src="../../assets/19.jpg" alt=" " class="img-responsive" />
                             <h4>maxime placeat facere possimus</h4>
