--- a/src/app/frozen/frozen.component.html
+++ b/src/app/frozen/frozen.component.html
@@ -4,7 +4,7 @@
         </div>
 
         <div class="row w3l_banner_nav_right_banner3_btm">
-            <div class="col-md-4 w3l_banner_nav_right_banner3_btml">
+            <div class="col-lg-4 w3l_banner_nav_right_banner3_btml">
                 <div class="view view-tenth">
                     <img src="../../assets/24.jpg" alt=" " class="img-responsive">
                     <div class="mask">
@@ -19,7 +19,7 @@
                     <li>sed do eiusmod tempor incididunt</li>
                 </ol>
             </div>
-            <div class="col-md-4 w3l_banner_nav_right_banner3_btml">
+            <div class="col-lg-4 w3l_banner_nav_right_banner3_btml">
                 <div class="view view-tenth">
                     <img src="../../assets/29.jpg" alt=" " class="img-responsive" />
                     <div class="mask">
@@ -34,7 +34,7 @@
                     <li>vel eum iure reprehenderit</li>
                 </ol>
             </div>
-            <div class="col-md-4 w3l_banner_nav_right_banner3_btml">
+            <div class="col-lg-4 w3l_banner_nav_right_banner3_btml">
                 <div class="view view-tenth">
                     <img src="../../assets/30.jpg" alt=" " class="img-responsive" />
                     <div class="mask">
@@ -55,7 +55,7 @@
         <div class="w3ls_w3l_banner_nav_right_grid w3ls_w3l_banner_nav_right_grid_veg">
             <h3 class="w3l_fruit">Frozen Food</h3>
             <div class="row w3ls_w3l_banner_nav_right_grid1 w3ls_w3l_banner_nav_right_grid1_veg">
-                <div class="col-md-3 w3ls_w3l_banner_left w3ls_w3l_banner_left_asdfdfd" *ngFor="let product of frozenItems|slice:0:4;">
+                <div class="col-lg-3 w3ls_w3l_banner_left w3ls_w3l_banner_left_asdfdfd" *ngFor="let product of frozenItems|slice:0:4;">
                     <div class="hover14 column">
                         <div class="agile_top_brand_left_grid w3l_agile_top_brand_left_grid">
                             <div *ngIf="product.payload.doc.data().tagFile=='offer.png'" class="agile_top_brand_left_grid_pos">
@@ -89,7 +89,7 @@
                 <div class="clearfix"> </div>
             </div>
             <div class="row w3ls_w3l_banner_nav_right_grid1 w3ls_w3l_banner_nav_right_grid1_veg">
-                <div class="col-md-3 w3ls_w3l_banner_left w3ls_w3l_banner_left_asdfdfd" *ngFor="let product of frozenItems|slice:4:8;">
+                <div class="col-lg-3 w3ls_w3l_banner_left w3ls_w3l_banner_left_asdfdfd" *ngFor="let product of frozenItems|slice:4:8;">
                     <div class="hover14 column">
                         <div class="agile_top_brand_left_grid w3l_agile_top_brand_left_grid">
                             <div *ngIf="product.payload.doc.data().tagFile=='offer.png'" class="agile_top_brand_left_grid_pos">
@@ -123,7 +123,7 @@
                 <div class="clearfix"> </div>
             </div>
             <div class="row w3ls_w3l_banner_nav_right_grid1 w3ls_w3l_banner_nav_right_grid1_veg">
-                <div class="col-md-3 w3ls_w3l_banner_left w3ls_w3l_banner_left_asdfdfd" *ngFor="let product of frozenItems|slice:8:12;">
+                <div class="col-lg-3 w3ls_w3l_banner_left w3ls_w3l_banner_left_asdfdfd" *ngFor="let product of frozenItems|slice:8:12;">
                     <div class="hover14 column">
                         <div class="agile_top_brand_left_grid w3l_agile_top_brand_left_grid">
                             <div *ngIf="product.payload.doc.data().tagFile=='offer.png'" class="agile_top_brand_left_grid_pos">
