--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -42,7 +42,7 @@
         <div class="wthree_banner_bottom_left_grid_sub">
         </div>
         <div class="row wthree_banner_bottom_left_grid_sub1">
-            <div class="col-md-4 wthree_banner_bottom_left">
+            <div class="col-lg-4 wthree_banner_bottom_left">
                 <div class="wthree_banner_bottom_left_grid">
                     <img src="../../assets/4.jpg" alt=" " class="img-responsive" />
                     <div class="wthree_banner_bottom_left_grid_pos">
@@ -50,7 +50,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4 wthree_banner_bottom_left">
+            <div class="col-lg-4 wthree_banner_bottom_left">
                 <div class="wthree_banner_bottom_left_grid">
                     <img src="../../assets/5.jpg" alt=" " class="img-responsive" />
                     <div class="wthree_banner_btm_pos">
@@ -58,7 +58,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4 wthree_banner_bottom_left">
+            <div class="col-lg-4 wthree_banner_bottom_left">
                 <div class="wthree_banner_bottom_left_grid">
                     <img src="../../assets/6.jpg" alt=" " class="img-responsive" />
                     <div class="wthree_banner_btm_pos1">
@@ -77,7 +77,7 @@
         <h3>Hot Offers</h3>
 
         <div class="row agile_top_brands_grids">
-                <div class="col-md-3 top_brand_left" *ngFor="let product of hotItems">
+                <div class="col-lg-3 top_brand_left" *ngFor="let product of hotItems">
                     <div class="hover14 column">
                         <div class="agile_top_brand_left_grid">
                             <div *ngIf="product.payload.doc.data().tagFile=='offer.png'" class="agile_top_brand_left_grid_pos">
@@ -118,7 +118,7 @@
     <div class="container-fluid">
         <h3>Top Products</h3>
         <div class="row w3l_fresh_vegetables_grids">
-            <div class="col-md-3 w3l_fresh_vegetables_grid w3l_fresh_vegetables_grid_left">
+            <div class="col-lg-3 w3l_fresh_vegetables_grid w3l_fresh_vegetables_grid_left">
                 <div class="w3l_fresh_vegetables_grid2">
                     <ul>
                         <li><i class="fa fa-check" aria-hidden="true"></i><a routerLink="/branded">All Brands</a></li>
@@ -134,14 +134,14 @@
                     </ul>
                 </div>
             </div>
-            <div class="col-md-9 w3l_fresh_vegetables_grid_right">
+            <div class="col-lg-9 w3l_fresh_vegetables_grid_right">
             <div class="row">
-                <div class="col-md-4 w3l_fresh_vegetables_grid">
+                <div class="col-lg-4 w3l_fresh_vegetables_grid">
                     <div class="w3l_fresh_vegetables_grid1">
                         <img src="../../assets/8.jpg" alt=" " class="img-responsive" />
                     </div>
                 </div>
-                <div class="col-md-4 w3l_fresh_vegetables_grid">
+                <div class="col-lg-4 w3l_fresh_vegetables_grid">
                     <div class="w3l_fresh_vegetables_grid1">
                         <div class="w3l_fresh_vegetables_grid1_rel">
                             <img src="../../assets/7.jpg" alt=" " class="img-responsive" />
@@ -159,7 +159,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4 w3l_fresh_vegetables_grid">
+                <div class="col-lg-4 w3l_fresh_vegetables_grid">
                     <div class="w3l_fresh_vegetables_grid1">
                         <img src="../../assets/9.jpg" alt=" " class="img-responsive" />
                     </div>
@@ -169,7 +169,7 @@
                 </div>
                 <div class="clearfix"> </div>
                 <!-- <div class="agileinfo_move_text"> -->
-                <div class="col-md-12 agileinfo_move_text">
+                <div class="col-lg-12 agileinfo_move_text">
                     <div class="agileinfo_marquee">
                         <h4>get <span class="blink_me">25% off</span> on first order and also get gift voucher</h4>
                     </div>
