--- a/src/app/household/household.component.html
+++ b/src/app/household/household.component.html
@@ -8,7 +8,7 @@
         <div class="w3ls_w3l_banner_nav_right_grid1">
             <h6>cleaning</h6>
             <div class="row">
-                <div class="col-md-3 w3ls_w3l_banner_left" *ngFor="let product of cleaningItems">
+                <div class="col-lg-3 w3ls_w3l_banner_left" *ngFor="let product of cleaningItems">
                     <div class="hover14 column">
                         <div class="agile_top_brand_left_grid w3l_agile_top_brand_left_grid">
                             <div *ngIf="product.payload.doc.data().tagFile=='offer.png'" class="agile_top_brand_left_grid_pos">
@@ -45,7 +45,7 @@
         <div class="w3ls_w3l_banner_nav_right_grid1">
             <h6>utensils</h6>
             <div class="row">
-                <div class="col-md-3 w3ls_w3l_banner_left" *ngFor="let product of utensilItems">
+                <div class="col-lg-3 w3ls_w3l_banner_left" *ngFor="let product of utensilItems">
                     <div class="hover14 column">
                         <div class="agile_top_brand_left_grid w3l_agile_top_brand_left_grid">
                             <div *ngIf="product.payload.doc.data().tagFile=='offer.png'" class="agile_top_brand_left_grid_pos">
@@ -81,7 +81,7 @@
         <div class="w3ls_w3l_banner_nav_right_grid1">
             <h6>Pet Food</h6>
             <div class="row">
-                <div class="col-md-3 w3ls_w3l_banner_left" *ngFor="let product of petItems">
+                <div class="col-lg-3 w3ls_w3l_banner_left" *ngFor="let product of petItems">
                     <div class="hover14 column">
                         <div class="agile_top_brand_left_grid w3l_agile_top_brand_left_grid">
                             <div *ngIf="product.payload.doc.data().tagFile=='offer.png'" class="agile_top_brand_left_grid_pos">
