--- a/src/app/kitchen/kitchen.component.html
+++ b/src/app/kitchen/kitchen.component.html
@@ -4,7 +4,7 @@
     </div>
 
     <div class="row w3l_banner_nav_right_banner3_btm">
-        <div class="col-md-4 w3l_banner_nav_right_banner3_btml">
+        <div class="col-lg-4 w3l_banner_nav_right_banner3_btml">
             <div class="view view-tenth">
                 <img src="../../assets/13.jpg" alt=" " class="img-responsive" />
                 <div class="mask">
@@ -19,7 +19,7 @@
                 <li>sed do eiusmod tempor incididunt</li>
             </ol>
         </div>
-        <div class="col-md-4 w3l_banner_nav_right_banner3_btml">
+        <div class="col-lg-4 w3l_banner_nav_right_banner3_btml">
             <div class="view view-tenth">
                 <img src="../../assets/20.jpg" alt=" " class="img-responsive">
                 <div class="mask">
@@ -34,7 +34,7 @@
                 <li>magnam aliquam quaerat</li>
             </ol>
         </div>
-        <div class="col-md-4 w3l_banner_nav_right_banner3_btml">
+        <div class="col-lg-4 w3l_banner_nav_right_banner3_btml">
             <div class="view view-tenth">
                 <img src="../../assets/15.jpg" alt=" " class="img-responsive" />
                 <div class="mask">
@@ -57,7 +57,7 @@
             <h6>Popular Categories</h6>
         </div>
         <div class="row w3ls_w3l_banner_nav_right_grid_head_grids">
-            <div class="col-md-4 w3ls_w3l_banner_nav_right_grid_head_grid">
+            <div class="col-lg-4 w3ls_w3l_banner_nav_right_grid_head_grid">
                 <div>
                     <img src="../../assets/22.jpg" alt=" " class="img-responsive" />
                     <h4>Bread & Bakery</h4>
@@ -69,7 +69,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="col-md-4 w3ls_w3l_banner_nav_right_grid_head_grid">
+            <div class="col-lg-4 w3ls_w3l_banner_nav_right_grid_head_grid">
                 <div>
                     <img src="../../assets/23.jpg" alt=" " class="img-responsive" />
                     <h4>Beverages</h4>
@@ -80,7 +80,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="col-md-4 w3ls_w3l_banner_nav_right_grid_head_grid">
+            <div class="col-lg-4 w3ls_w3l_banner_nav_right_grid_head_grid">
                 <div>
                     <img src="../../assets/24.jpg" alt=" " class="img-responsive" />
                     <h4>Frozen Foods</h4>
@@ -104,7 +104,7 @@
 <div class="container">
     <h3>Popular Products</h3>
     <div class="row agile_top_brands_grids">
-        <div class="col-md-3 top_brand_left" *ngFor="let product of hotItems">
+        <div class="col-lg-3 top_brand_left" *ngFor="let product of hotItems">
             <div class="hover14 column">
                 <div class="agile_top_brand_left_grid">
                     <div *ngIf="product.payload.doc.data().tagFile=='offer.png'" class="agile_top_brand_left_grid_pos">
