--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -9,25 +9,16 @@
                     <h2>Login to your account</h2>
                     <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
                         <input type="text" formControlName="username" placeholder="Username">
-                        <div class="text-danger" *ngIf="loginForm.get('username').touched && loginForm.get('username').invalid">
-                            <div class="text-danger" *ngIf="loginForm.get('username').hasError('required')">
+                        <div class="text-danger" *ngIf="loginForm.get('username').invalid">
+                            <div class="text-danger" *ngIf="loginForm.get('username').touched && loginForm.get('username').hasError('required')">
                                 Username is Required!
-                            </div>
-                            <div class="text-danger" *ngIf="loginForm.get('username').hasError('pattern')">
-                                Invalid Username!
-                            </div>
-                            <div class="text-danger" *ngIf="loginForm.get('username').hasError('minlength') && !loginForm.get('username').hasError('pattern')">
-                                Min Length should be of 6!
                             </div>
                         </div>
 
                         <input type="password" formControlName="password" placeholder="Password">
-                        <div class="text-danger" *ngIf="loginForm.get('password').touched && loginForm.get('password').invalid">
-                            <div class="text-danger" *ngIf="loginForm.get('password').hasError('required')">
+                        <div class="text-danger" *ngIf="loginForm.get('password').invalid">
+                            <div class="text-danger" *ngIf="loginForm.get('password').touched && loginForm.get('password').hasError('required')">
                                 Password is Required!
-                            </div>
-                            <div class="text-danger" *ngIf="loginForm.get('password').hasError('minlength')">
-                                Min Length should be of 6!
                             </div>
                         </div>
 
@@ -46,7 +37,7 @@
 <!-- newsletter-top-serv-btm -->
 <div class="newsletter-top-serv-btm">
     <div class="container row mx-auto">
-        <div class="col-md-4 wthree_news_top_serv_btm_grid">
+        <div class="col-lg-4 wthree_news_top_serv_btm_grid">
             <div class="wthree_news_top_serv_btm_grid_icon">
                 <i class="fa fa-shopping-cart" aria-hidden="true"></i>
             </div>
@@ -54,7 +45,7 @@
             <p>Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus 
                 saepe eveniet ut et voluptates repudiandae sint et.</p>
         </div>
-        <div class="col-md-4 wthree_news_top_serv_btm_grid">
+        <div class="col-lg-4 wthree_news_top_serv_btm_grid">
             <div class="wthree_news_top_serv_btm_grid_icon">
                 <i class="fa fa-bar-chart" aria-hidden="true"></i>
             </div>
@@ -62,7 +53,7 @@
             <p>Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus 
                 saepe eveniet ut et voluptates repudiandae sint et.</p>
         </div>
-        <div class="col-md-4 wthree_news_top_serv_btm_grid">
+        <div class="col-lg-4 wthree_news_top_serv_btm_grid">
             <div class="wthree_news_top_serv_btm_grid_icon">
                 <i class="fa fa-truck" aria-hidden="true"></i>
             </div>
