--- a/src/app/service/service.component.html
+++ b/src/app/service/service.component.html
@@ -3,21 +3,21 @@
     <div class="services">
         <h3>Services</h3>
         <div class="row w3ls_service_grids">
-            <div class="col-md-5 w3ls_service_grid_left">
+            <div class="col-lg-5 w3ls_service_grid_left">
                 <h4>cum soluta nobis est</h4>
                 <p>Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis 
                     voluptatibus maiores alias consequatur aut perferendis doloribus asperiores 
                     repellat.</p>
             </div>
-            <div class="col-md-7 w3ls_service_grid_right">
+            <div class="col-lg-7 w3ls_service_grid_right">
                 <div class="row">
-                    <div class="col-md-4 w3ls_service_grid_right_1">
+                    <div class="col-lg-4 w3ls_service_grid_right_1">
                         <img src="../../assets/18.jpg" alt=" " class="img-responsive" />
                     </div>
-                    <div class="col-md-4 w3ls_service_grid_right_1">
+                    <div class="col-lg-4 w3ls_service_grid_right_1">
                         <img src="../../assets/19.jpg" alt=" " class="img-responsive" />
                     </div>
-                    <div class="col-md-4 w3ls_service_grid_right_1">
+                    <div class="col-lg-4 w3ls_service_grid_right_1">
                         <img src="../../assets/20.jpg" alt=" " class="img-responsive" />
                     </div>
                 </div>
@@ -27,10 +27,10 @@
         </div>
     
         <div class="row w3ls_service_grids1">
-            <div class="col-md-6 w3ls_service_grids1_left">
+            <div class="col-lg-6 w3ls_service_grids1_left">
                 <img src="../../assets/4.jpg" alt=" " class="img-responsive" />
             </div>
-            <div class="col-md-6 w3ls_service_grids1_right">
+            <div class="col-lg-6 w3ls_service_grids1_right">
                 <ul>
                     <li><i class="fa fa-long-arrow-right" aria-hidden="true"></i>et voluptates repudiandae sint et molestiae</li>
                     <li><i class="fa fa-long-arrow-right" aria-hidden="true"></i>rerum necessitatibus saepe eveniet ut</li>
@@ -51,22 +51,22 @@
 <!-- services-bottom -->
 <div class="services-bottom">
     <div class="container row mx-auto">
-        <div class="col-md-3 about_counter_left">
+        <div class="col-lg-3 about_counter_left">
             <i class="glyphicon glyphicon-user" aria-hidden="true"></i>
             <p class="counter">89,147</p> 
             <h3>Followers</h3>
         </div>
-        <div class="col-md-3 about_counter_left">
+        <div class="col-lg-3 about_counter_left">
             <i class="glyphicon glyphicon-piggy-bank" aria-hidden="true"></i>
             <p class="counter">54,598</p> 
             <h3>Savings</h3>
         </div>
-        <div class="col-md-3 about_counter_left">
+        <div class="col-lg-3 about_counter_left">
             <i class="glyphicon glyphicon-export" aria-hidden="true"></i>
             <p class="counter">83,983</p> 
             <h3>Support</h3>
         </div>
-        <div class="col-md-3 about_counter_left">
+        <div class="col-lg-3 about_counter_left">
             <i class="glyphicon glyphicon-bullhorn" aria-hidden="true"></i>
             <p class="counter">45,894</p> 
             <h3>Popularity</h3>
@@ -78,7 +78,7 @@
 <!-- newsletter-top-serv-btm -->
 <div class="newsletter-top-serv-btm">
     <div class="container row mx-auto">
-        <div class="col-md-4 wthree_news_top_serv_btm_grid">
+        <div class="col-lg-4 wthree_news_top_serv_btm_grid">
             <div class="wthree_news_top_serv_btm_grid_icon">
                 <i class="fa fa-shopping-cart" aria-hidden="true"></i>
             </div>
@@ -86,7 +86,7 @@
             <p>Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus 
                 saepe eveniet ut et voluptates repudiandae sint et.</p>
         </div>
-        <div class="col-md-4 wthree_news_top_serv_btm_grid">
+        <div class="col-lg-4 wthree_news_top_serv_btm_grid">
             <div class="wthree_news_top_serv_btm_grid_icon">
                 <i class="fa fa-bar-chart" aria-hidden="true"></i>
             </div>
@@ -94,7 +94,7 @@
             <p>Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus 
                 saepe eveniet ut et voluptates repudiandae sint et.</p>
         </div>
-        <div class="col-md-4 wthree_news_top_serv_btm_grid">
+        <div class="col-lg-4 wthree_news_top_serv_btm_grid">
             <div class="wthree_news_top_serv_btm_grid_icon">
                 <i class="fa fa-truck" aria-hidden="true"></i>
             </div>
