--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -71,7 +71,7 @@
                     <input type="reset" value="Clear">
                 </form>
             </div>
-            <app-dialog title="Mail Us"></app-dialog>
+            <app-dialog title="Mail Us" msg="Submitted Successfully!"></app-dialog>
             <div class="clearfix"> </div>
         </div>
     </div>
