--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -67,7 +67,7 @@
                         <input [disabled]="!registerForm.valid" type="submit" value="Register"  data-toggle="modal" data-target="#exampleModal">
                     </form>
                 </div>
-                <app-dialog title="Sign Up"></app-dialog>
+                <app-dialog title="Sign Up" msg="Submitted Successfully!"></app-dialog>
             </div>
         </div>
     </div>
